dnl *************************************************************
dnl
dnl Process this file with autoconf to produce a configure script
dnl 
dnl *************************************************************

dnl -------------------------------------------------------------
dnl initializing procedures
dnl -------------------------------------------------------------
AC_PREREQ(2.52)
AC_INIT(ccruncher, 0.1)
AM_INIT_AUTOMAKE(1.6.1)

dnl -------------------------------------------------------------
dnl rebuild makefile prevention 
dnl solve automake versions conflicts
dnl -------------------------------------------------------------
AM_MAINTAINER_MODE

dnl -------------------------------------------------------------
dnl setting attributes
dnl -------------------------------------------------------------
AC_PROG_CXX
AC_PROG_INSTALL

dnl -------------------------------------------------------------
dnl checking for xerces library
dnl -------------------------------------------------------------
AC_CHECK_LIB(xerces-c, XMLPlatformUtils::Initialize)

dnl -------------------------------------------------------------
dnl checkings to perform
dnl -------------------------------------------------------------
AC_STDC_HEADERS
AC_HAVE_HEADERS(sys/resource.h time.h sys/stat.h sys/types.h unistd.h dirent.h)
dnl AC_CHECK_FUNCS(clock)

dnl -------------------------------------------------------------
dnl setting debug/optimization options
dnl   optimized mode => -O2 (default)
dnl   debug mode => -g -pg
dnl -------------------------------------------------------------
AC_ARG_ENABLE(debug, 
  [  --enable-debug    Turn on debugging [default=no]],
  [case "${enableval}" in
    yes) debug=true ;;
    no)  debug=false ;;
    *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
  esac],
  [debug=false])

if test x$debug = xtrue ; then
  CXXFLAGS="-g -pg"
  AC_DEFINE(ENABLE_DEBUG)
else
  CXXFLAGS="-O2"
  DEFS="NDEBUG"
fi
AC_SUBST(CXXFLAGS)
AC_SUBST(DEFS)

dnl -------------------------------------------------------------
dnl makefile's to be built
dnl -------------------------------------------------------------
AC_OUTPUT([Makefile src/Makefile])
